DC-1 fixed overflow modal

--- a/src/renderer/components/BroadcasterView/WatcherLink/WatcherLink.module.scss
+++ b/src/renderer/components/BroadcasterView/WatcherLink/WatcherLink.module.scss
@@ -1,19 +1,3 @@
-.container {
-  margin: 0;
-  color: #000000d9;
-  font-size: 14px;
-  line-height: 1.5715;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  padding: 1rem 1.5rem;
-  border-radius: 2px;
-  background-color: #fff;
-  border: 1px solid rgba(0,0,0,.06);
-  min-width: 400px;
-  box-shadow: 0 2px 8px #f0f1f2;
-}
-
 .link_container {
   display: flex;
   width: 100%;
